--- a/index.html
+++ b/index.html
@@ -1,19 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
-    <title>Hello World!</title>
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>,
-    Chromium <span id="chrome-version"></span>,
-    and Electron <span id="electron-version"></span>.
+<html lang="fr">
 
-    <!-- You can also require other files to run in this process -->
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <title>TokenTools</title>
+</head>
+
+<style>
+    * {
+        color: rgb(170, 170, 170);
+        overflow: hidden auto;
+    }
+    
+    .grid-css {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 20px;
+        grid-auto-rows: minmax(100px, auto);
+    }
+</style>
+
+<body class="bg-dark jumbotron">
+
+    <div class="grid-css">
+        <div class="card border-danger mb-3 bg-dark">
+            <div class="card-header">Jugement dernier<span class="badge badge-danger ml-3">NÉCÉSSITE LES PRIVILÈGES</span></div>
+            <div class="card-body">
+                <h4 class="card-title">Banni tous les membres d'un serveur</h4>
+                <p class="card-text">Ce type d'attaque n'est disponible que si le bot possède les permissions de bannir des membres.
+                </p>
+                <hr>
+                <div class="form-group has-success">
+                    <label class="form-control-label">Serveur ciblé :</label>
+                    <input type="text" placeholder="Entrez l'ID du serveur" class="form-control">
+                </div>
+            </div>
+        </div>
+
+        <div class="card border-success mb-3 bg-dark">
+            <div class="card-header">Textos chauds<span class="badge badge-success ml-3">OK</span></div>
+            <div class="card-body">
+                <h4 class="card-title">Envoie un message privé</h4>
+                <p class="card-text">Ce type d'attaque permet d'envoyer un message privé à tous les membres d'un serveur, bots exclus.
+                </p>
+                <hr>
+                <div class="form-group has-success">
+                    <label class="form-control-label">Serveur ciblé :</label>
+                    <input type="text" placeholder="Entrez l'ID du serveur" class="form-control">
+                </div>
+            </div>
+        </div>
+
+        <div class="card border-danger mb-3 bg-dark">
+            <div class="card-header">Nettoyage de printemps<span class="badge badge-danger ml-3">NÉCÉSSITE LES PRIVILÈGES</span></div>
+            <div class="card-body">
+                <h4 class="card-title">Supprime les salons</h4>
+                <p class="card-text">Ce type d'attaque permet de supprimer tous les d'un serveur.
+                </p>
+                <hr>
+                <div class="form-group has-success">
+                    <label class="form-control-label">Serveur ciblé :</label>
+                    <input type="text" placeholder="Entrez l'ID du serveur" class="form-control">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <script src="./renderer.js"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+
+</body>
+
 </html>
