Starting with discord.js nd token field added

--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html lang="fr">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>TokenTools</title>
 </head>
 
@@ -27,6 +22,16 @@
 </style>
 
 <body class="bg-dark jumbotron">
+
+    <div class="card border-primary mb-3 bg-dark">
+        <div class="card-header">Information du bot</div>
+        <div class="card-body">
+            <h4 class="card-title">Pour fonctionner, le bot requiert un jeton. Une fois entré, cliquez sur "Connecter", et toutes les informations le concernant serront alors affichées</h4>
+            <input class="card-input" type="text" placeholder="Entrez le jeton ici">
+            <hr>
+            <div class="form-group"></div>
+        </div>
+    </div>
 
     <div class="grid-css">
         <div class="card border-danger mb-3 bg-dark">
